--- a/.github/workflows/AvroFusionGenerator.yml
+++ b/.github/workflows/AvroFusionGenerator.yml
@@ -124,7 +124,7 @@ jobs:
       run: echo "new_version=${{ needs.prepare.outputs.new_version }}"
 
     - name: Create NuGet package
-      run:  dotnet pack ${{ env.Project_Directory }}/${{ env.Project_Name }}.csproj --configuration Release --version ${{ steps.get_new_version.outputs.new_version }} --output $NUPKG_DIR --verbosity detailed
+      run:  dotnet pack --configuration Release --version ${{ steps.get_new_version.outputs.new_version }}
       working-directory: AvroFusionSource/AvroFusionGenerator
 
     - name: List NuGet package file
